@@ -92,6 +92,9 @@ PYJSLIB_BUILTIN_CLASSES=("BaseException",
                          "TypeError",
                          "KeyError",
                          "LookupError",
+                         "NameError",
+                         "ValueError",
+                         "IndexError",
                          "list",
                          "dict",
                          "object",
